source/blender/blenloader/intern/readfile.c
@@ -5230,7 +5230,7 @@ static void direct_link_modifiers(FileData *fd, ListBase *lb)
 			ParticleSystemModifierData *psmd = (ParticleSystemModifierData *)md;
 			
 			psmd->mesh_final = NULL;
-			psmd->mesh_deformed = NULL;
+			psmd->mesh_original = NULL;
 			psmd->psys= newdataadr(fd, psmd->psys);
 			psmd->flag &= ~eParticleSystemFlag_psys_updated;
 			psmd->flag |= eParticleSystemFlag_file_loaded;
