source/blender/editors/physics/particle_edit.c
@@ -2963,7 +2963,7 @@ static void PE_mirror_x(
 			}
 			else {
 				newpa->num_dmcache = psys_particle_dm_face_lookup(
-				                         psmd->mesh_final, psmd->mesh_deformed, newpa->num, newpa->fuv, NULL);
+				                         psmd->mesh_final, psmd->mesh_original, newpa->num, newpa->fuv, NULL);
 			}
 
 			/* update edit key pointers */
@@ -3557,7 +3557,7 @@ static int brush_add(const bContext *C, PEData *data, short number)
 		mesh = psmd->mesh_final;
 	}
 	else {
-		mesh = psmd->mesh_deformed;
+		mesh = psmd->mesh_original;
 	}
 	BLI_assert(mesh);
 
@@ -3591,11 +3591,11 @@ static int brush_add(const bContext *C, PEData *data, short number)
 				add_pars[n].num = add_pars[n].num_dmcache;
 				add_pars[n].num_dmcache = DMCACHE_ISCHILD;
 			}
-			else if (mesh == psmd->mesh_deformed) {
+			else if (mesh == psmd->mesh_original) {
 				/* Final DM is not same topology as orig mesh, we have to map num_dmcache to real final dm. */
 				add_pars[n].num = add_pars[n].num_dmcache;
 				add_pars[n].num_dmcache = psys_particle_dm_face_lookup(
-				                              psmd->mesh_final, psmd->mesh_deformed,
+				                              psmd->mesh_final, psmd->mesh_original,
 				                              add_pars[n].num, add_pars[n].fuv, NULL);
 			}
 			else {
